force-app/main/default/objects/ROSE_Form_Response__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <label>Error Message</label>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>