force-app/main/default/objects/ROSE_Form_Response__c/fields/GPS_Latitude__c.field-meta.xml
<CustomField>
    <fullName>GPS_Latitude__c</fullName>
    <label>GPS Latitude</label>
    <type>Number</type>
    <precision>14</precision>
    <scale>6</scale>
</CustomField>