force-app/main/default/objects/ROSE_Form_Response__c/fields/Response_Data__c.field-meta.xml
<CustomField>
    <fullName>Response_Data__c</fullName>
    <label>Response Data</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>