force-app/main/default/objects/ROSE_Form_Response__c/fields/ROSE_Form_Definition__c.field-meta.xml
<CustomField>
    <fullName>ROSE_Form_Definition__c</fullName>
    <label>Form Definition</label>
    <referenceTo>ROSE_Form_Definition__c</referenceTo>
    <relationshipLabel>Form Responses</relationshipLabel>
    <relationshipName>Form_Responses</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>