force-app/main/default/objects/ROSE_Form_Response__c/fields/ROSE_Task__c.field-meta.xml
<CustomField>
    <fullName>ROSE_Task__c</fullName>
    <label>Task</label>
    <referenceTo>ROSE_Task__c</referenceTo>
    <relationshipLabel>Form Responses</relationshipLabel>
    <relationshipName>Form_Responses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <required>true</required>
</CustomField>